--- a/sproduct.html
+++ b/sproduct.html
@@ -12,19 +12,26 @@
 </head>
 
 <body>
-    <section class="header">
-        <div class="logo">
-            <a href="#"><img src="img/logo.png" alt=""></a>
+    <section id="header">
+        <a href="#"><img src="img/logo.png" class="logo" alt="" /></a>
+        <div>
+          <ul id="navbar">
+            <li><a href="index.html">Home</a></li>
+            <li><a class="active" href="shop.html">Shop</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li id="lg-bag">
+              <a href="cart.html"><i class="far fa-shopping-bag"></i></a>
+            </li>
+            <a href="#" id="close"><i class="far fa-times"></i></a>
+          </ul>
         </div>
-        <div class="navbar">
-            <a href="index.html">Home</a>
-            <a class="active" href="shop.html">Shop</a>
-            <a href="blog.html">Blog</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
-            <a href="cart.html" class="far fa-shopping-bag"></a>
+        <div id="mobile">
+          <a href="cart.html"><i class="far fa-shopping-bag"></i></a>
+          <i id="bar" class="fas fa-outdent"></i>
         </div>
-    </section>
+      </section>
 
     <section id="prodetails" class="section-p1">
         <div class="single-pro-image">
